--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-box position="-1 0.5 -3" rotation="0 0 50" color="orange"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder
         position="1 0.75 -3"
-        radius="0.5"
-        height="1.5"
+        radius="0.8"
+        height="1"
         color="#FFC65D"
       ></a-cylinder>
       <a-plane
-        position="0 0 -4"
+        position="0 0 -3"
         rotation="-90 0 0"
-        width="4"
+        width="6"
         height="4"
         color="#7BC8A4"
       ></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky color="blue"></a-sky>
     </a-scene>
   </body>
 </html>
