--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
   </head>
   <body>
+    
     <a-scene>
+      <a-entity position="0 0 -3" rotation="0 30 30">
       <a-box position="-1 3 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -15" radius="1.25" color="#EF2D5E">
-        <a-ring position="-1 2 -4" radius="2" color="green">
+        <a-ring position="-1 2 -3" radius="2" color="green">
           
         </a-ring>
-        <a-ring position="2 2 -4" radius="2" color="green"> </a-ring>
+        <a-ring position="1 2 -3" radius="2" color="green"> </a-ring>
       </a-sphere>
       <a-cylinder
         position="-1 0.75 -3"
+        rotation="90 0 0"
         radius="0.5"
         height="1.5"
         color="#FFC65D"
@@ -25,6 +28,8 @@
         color="#7BC8A4"
       ></a-plane>
       <a-sky color="#ECECEC"></a-sky>
+         </a-entity>
     </a-scene>
+   
   </body>
 </html>
