--- a/index.html
+++ b/index.html
@@ -1,35 +1,63 @@
-<html>
-  <head>
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  </head>
-  <body>
-    
-    <a-scene>
-      <a-entity position="3 0 -3" rotation="0 30 30">
-      <a-box position="-1 3 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -15" radius="1.25" color="#EF2D5E">
-        <a-ring position="-1 2 -3" radius="2" color="green">
-          
-        </a-ring>
-        <a-ring position="1 2 -3" radius="2" color="green"> </a-ring>
-      </a-sphere>
-      <a-cylinder
-        position="-1 0.75 -3"
-        rotation="90 0 0"
-        radius="0.5"
-        height="1.5"
-        color="#FFC65D"
-      ></a-cylinder>
-      <a-plane
-        position="0 0 -4"
-        rotation="-90 0 0"
-        width="4"
-        height="4"
-        color="#7BC8A4"
-      ></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
-         </a-entity>
-    </a-scene>
-   
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>A-Frame</title>
+		<link rel="stylesheet" href="./style.css" />
+		<script type="module" src="/main.js"></script>
+	</head>
+	<body>
+		<a-scene>
+			<a-assets>
+				<a-asset-item
+					id="jenkinsModel"
+					src="./assets/models/Jenkins.gltf"
+				></a-asset-item>
+
+				<img id="skyTexture" src="/images/sky.jpg" />
+			</a-assets>
+
+			<a-entity
+				sphere
+				geometry="primitive: sphere; radius: 1"
+				position="0 1 -5"
+				light="type: ambient; color: white; intensity: 2"
+			></a-entity>
+
+			<a-box
+				music-box
+				position="2 0 -2"
+				width="0.5"
+				height="0.5"
+				depth="0.5"
+				class="raycastable"
+				color="orange"
+			></a-box>
+
+			<a-plane
+				plane
+				position="0 0 -4"
+				rotation="-90 0 0"
+				width="5"
+				height="5"
+				color="#7BC8A4"
+				class="raycastable"
+			></a-plane>
+			<a-sky src="#skyTexture"></a-sky>
+
+			<a-light
+				type="directional"
+				light="castShadow:true;"
+				position="1 1 1"
+				intensity="2"
+			></a-light>
+
+			<a-camera
+				cursor="fuse: false; rayOrigin:mouse"
+				raycaster="objects: .raycastable"
+			>
+			</a-camera>
+		</a-scene>
+	</body>
 </html>
