--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</a-assets>
 
 			<a-entity
-				sphere
+				reflective
 				shadow="cast: true"
 				geometry="primitive: sphere; radius: 1"
 				position="0 1 -5"
